--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_DB_URL = mongodb+srv://nani:XpAvArpxZ6vTMgn3@todo.xdlub.mongodb.net/todo?retryWrites=true&w=majority
-
+PORT = YOUR_PORT_NO
+MONGO_DB_URL = YOUR_MONGO_DB_URL
