pushing to github

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_DB_URL = mongodb+srv://nani-local:DGuXpqyMtWjCFcnw@todo.xdlub.mongodb.net/todo?retryWrites=true&w=majority
+PORT = YOUR_PORT_NO
+MONGO_DB_URL = YOUR_MONGO_DB_URL
